# sdk

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  go.yml  python.yml
aigentrail/: enforcement.py  event_normalizer.py  evidence_ledger.py  hooks.py  otel_exporter.py
go/: README.md  doc.go  go.mod  go.sum  options.go  provider.go  redact.go  redact_test.go  roundtripper.go  roundtripper_test.go  tracer.go  tracer_test.go
python/: README.md  pyproject.toml
python/gentrail/: __init__.py  enforcement.py  hooks.py  otel_exporter.py
python/tests/: test_enforcement.py  test_enforcement_attribute.py  test_env_gate.py  test_redaction.py
tests/: test_enforcement.py
