[project]
name = "aigentrail"
version = "0.1.0"
description = "Gentrail SDK — governance hooks and telemetry capture for AI agents"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp-proto-http>=1.20.0",
]

[project.optional-dependencies]
strands = ["strands-agents>=0.1.0"]

[tool.hatch.build.targets.wheel]
packages = ["aigentrail"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
